// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Day /> should match snapshot for NOT present day, NOT selected 1`] = `
<div>
  <button
    class="day is-today"
    type="button"
    value=""
  >
    1
  </button>
</div>
`;

exports[`<Day /> should match snapshot for NOT present day, selected 1`] = `
<div>
  <button
    class="day selected is-today"
    type="button"
    value=""
  >
    1
  </button>
</div>
`;

exports[`<Day /> should match snapshot for present day, NOT selected 1`] = `
<div>
  <button
    class="day is-today"
    type="button"
    value=""
  >
    1
  </button>
</div>
`;

exports[`<Day /> should match snapshot for present day, selected 1`] = `
<div>
  <button
    class="day selected is-today"
    type="button"
    value=""
  >
    1
  </button>
</div>
`;

exports[`<DayPicker /> should match snapshot 1`] = `
<div>
  <div
    class="day-picker"
  >
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
    <button
      class="day is-today"
      type="button"
      value=""
    >
      1
    </button>
  </div>
</div>
`;
